[package]
name = "aci-registry"
version = "1.0.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
extended-info = []
fixed-repr = []

[build-dependencies]
csv = "1.3.0"
serde = "1.0.196"
serde_derive = "1.0.196"
