[package]
name = "aci-registry"
version = "1.0.0"
edition = "2021"
build = "build/main.rs"
authors = ["Connor Horman <chorman64@gmail.com>"]
description = """ 
Programmatic representation of the ACI-Registry
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/Clever-ISA/aci-registry-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
extended-info = []
fixed-repr = []

[build-dependencies]
csv = "1.3.0"
serde = "1.0.196"
serde_derive = "1.0.196"
